--- a/doc/Esterni/Specifica_tecnica/Specifica_tecnica_0_0_1.tex
+++ b/doc/Esterni/Specifica_tecnica/Specifica_tecnica_0_0_1.tex
@@ -4,11 +4,11 @@
 \input{../../util/hx-ambiente}
 
 \version{0.0.1}
-\creaz{10 febbraio 2017}
-\author{\ALL}
-\supervisor{\MM, \AZ}
+\creaz{15 febbraio 2017}
+\author{...}
+\supervisor{...}
 \uso{esterno}
-\dest{\TV, \RC, \GP, \ALL}
+\dest{\ALL}
 \title{Specifica Tecnica}
 % \date{9 gennaio 2017}
 
@@ -17,6 +17,7 @@
 \include{diario}
 \tableofcontents
 \listofpattern
+\newpage
 
 
 
@@ -51,6 +52,7 @@
 \section{Tracciamento}
 \input{tex/tracciamento}
 
-
+\section{Appendice A} % sì okay non ricordavo come farlo, è da sistemare
+\input{tex/appbackbone}
 
 \end{document}
